feat: add support for custom startup probe configurations